fixed nav bug by also toggling visibility

--- a/css/style.css
+++ b/css/style.css
@@ -652,6 +652,7 @@ body {
   left: 0;
   z-index: 1500;
   opacity: 0;
+  visibility: hidden;
   width: 0;
   transition: all 0.8s cubic-bezier(0.68, -0.55, 0.27, 1.55); }
 
@@ -692,6 +693,7 @@ body {
 
 .navigation__checkbox:checked ~ .navigation__nav {
   opacity: 1;
+  visibility: visible;
   width: 100%; }
 
 .navigation__icon {
